--- a/style.css
+++ b/style.css
@@ -119,6 +119,12 @@ transform: scale(0.2);
         overflow-x: hidden;
 
   }
+    .typing-text {
+  animation: none !important;
+  width: auto;
+  white-space: normal;
+  border-left: none !important;
+  }
 }
 
 
